# visualpath

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docker/: Dockerfile  Dockerfile.gpu  docker-compose.yaml
docs/: architecture.md  stream-synchronization.md  why-visualpath.md
examples/configs/: distributed.yaml  simple.yaml
src/visualpath/: __init__.py  api.py  runner.py
src/visualpath/backends/: __init__.py  base.py  protocols.py
src/visualpath/backends/pathway/: __init__.py  backend.py  connector.py  converter.py  operators.py  stats.py
src/visualpath/backends/simple/: __init__.py  backend.py  buffer.py  executor.py  scheduler.py  synchronizer.py
src/visualpath/cli/: __init__.py
src/visualpath/cli/commands/: debug.py  plugins.py  run.py  validate.py  version.py
src/visualpath/config/: __init__.py  loader.py  schema.py
src/visualpath/core/: __init__.py  extractor.py  fusion.py  isolation.py  module.py  path.py
src/visualpath/flow/: __init__.py  builder.py  executor.py  graph.py  interpreter.py  node.py  specs.py
src/visualpath/flow/nodes/: __init__.py  branch.py  filter.py  join.py  path.py  sampler.py  source.py
src/visualpath/observability/: __init__.py  records.py  sinks.py
src/visualpath/plugin/: __init__.py  discovery.py
src/visualpath/process/: __init__.py  ipc.py  launcher.py  mapper.py  orchestrator.py  serialization.py  worker.py
tests/: __init__.py  test_api.py  test_cli.py  test_config.py  test_core.py  test_flow_graph.py  test_flow_node.py  test_flow_specs.py  test_ipc.py  test_launcher.py  test_mapper.py  test_observability.py  test_orchestrator.py  test_path.py  test_pathway_backend.py  test_plugin.py  test_runner.py  test_simple_backend.py  test_venv_worker.py
